--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     />
     <link rel="stylesheet" href="style.css" />
     <title>Bankist | When Banking meets Minimalist</title>
+    <script difer src="script.js"></script>
   </head>
   <body>
     <header class="header">
@@ -275,10 +276,6 @@
           </div>
         </div>
 
-        <!-- <div class="slide"><img src="img/img-1.jpg" alt="Photo 1" /></div>
-        <div class="slide"><img src="img/img-2.jpg" alt="Photo 2" /></div>
-        <div class="slide"><img src="img/img-3.jpg" alt="Photo 3" /></div>
-        <div class="slide"><img src="img/img-4.jpg" alt="Photo 4" /></div> -->
         <button class="slider__btn slider__btn--left">&larr;</button>
         <button class="slider__btn slider__btn--right">&rarr;</button>
         <div class="dots"></div>
@@ -327,8 +324,7 @@
           target="_blank"
           href="https://twitter.com/jonasschmedtman"
           >steve Isolo</a
-        >. Use for learning or your portfolio. Don't use to teach. Don't claim
-        as your own product.
+        >.
       </p>
     </footer>
 
@@ -349,7 +345,5 @@
       </form>
     </div>
     <div class="overlay hidden"></div>
-
-    <script src="script.js"></script>
   </body>
 </html>
